Fix search margin on mobile

--- a/public/stylesheets/reader.css
+++ b/public/stylesheets/reader.css
@@ -148,4 +148,8 @@ body {
   .pull-right {
     display: none;
   }
+
+  .search {
+    margin-bottom: 10px;
+  }
 }
